# mcp:org.vibevm/discipline-rust — the AI-Native Rust discipline served
# over MCP (PROP-027; MCP-SOVEREIGNTY-PLAN Wave 3). This workspace
# AUTHORS one crate — the server — and vendors its whole dependency
# closure byte-identically (`cargo xtask sync-engines`): the stack's
# toolchain crates mirror the stack's own crates/ LAYOUT (stack crates
# at crates/<name>, neutral engines at crates/vendor/<name>) so their
# relative path-deps hold verbatim, and the vibe.toml `=0.5.0` pin
# holds these copies and the consumer's installed stack to ONE resolved
# version set. Never edit a vendored crate here — the fix surface is
# its authored home (discipline-core / rust-ai-native).
[workspace]
resolver = "3"
members = [
    "crates/discipline-mcp-rust",
    "crates/conform-frontend-rust",
    "crates/conform-cli-rust",
    "crates/discipline-cli-rust",
    "crates/specmap-cli-rust",
    "crates/tcg-oracle-bridge-rust",
    "crates/tcg-cli-rust",
    "crates/vendor/conform-core",
    "crates/vendor/mcp-core",
    "crates/vendor/specmap-core",
    "crates/vendor/specmark",
    "crates/vendor/specmark-grammar",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.93"
authors = ["Oleg Chirukhin"]
license-file = "LICENSE.md"
publish = false
repository = "https://gitverse.ru/anarchic/vibevm"
homepage = "https://gitverse.ru/anarchic/vibevm"

[workspace.dependencies]
# Internal crates — path-only; every one below is a vendored
# write-through (see the workspace header).
conform-core = { path = "crates/vendor/conform-core" }
conform-frontend-rust = { path = "crates/conform-frontend-rust" }
conform-cli-rust = { path = "crates/conform-cli-rust" }
discipline-cli-rust = { path = "crates/discipline-cli-rust" }
mcp-core = { path = "crates/vendor/mcp-core" }
specmap-core = { path = "crates/vendor/specmap-core" }
specmap-cli-rust = { path = "crates/specmap-cli-rust" }
specmark = { path = "crates/vendor/specmark" }
specmark-grammar = { path = "crates/vendor/specmark-grammar" }
tcg-oracle-bridge-rust = { path = "crates/tcg-oracle-bridge-rust" }
tcg-cli-rust = { path = "crates/tcg-cli-rust" }

# Third-party (all permissive licenses — PROP-000 §3). Feature sets
# match the stack's so the vendored crates build identically here.
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
toml = "0.9"
walkdir = "2"
glob = "0.3"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
clap = { version = "4", features = ["derive"] }

# Dev / test
tempfile = "3"
