# org.vibevm/rust-ai-native — a code-bearing package (PROP-024). It ships the
# ENGINE-CONFORM toolchain as runnable Rust, not only prompts: install the
# stack and you get the `conform` gate, not a description of it. This is the
# package's OWN Cargo workspace; vibevm consumes these crates by external
# path-dep (the vibevm root excludes packages/ + vibedeps/, PROP-024 §2.4).
#
# The policy stays with the CONSUMER — this package ships the engine, and each
# project writes its own conform.toml (TERRAFORM-PLAN-v0.3 §30; PROP-024 §2.2).
[workspace]
resolver = "3"
members = [
    "crates/conform-frontend-rust",
    "crates/conform-cli-rust",
    "crates/discipline-cli-rust",
    "crates/env-audit",
    "crates/tcg-oracle-bridge-rust",
    "crates/tcg-cli-rust",
    "crates/specmap-cli-rust",
    "crates/vendor/conform-core",
    "crates/vendor/specmap-core",
    "crates/vendor/specmark",
    "crates/vendor/specmark-grammar",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.93"
authors = ["Oleg Chirukhin"]
license-file = "LICENSE.md"
publish = false
repository = "https://gitverse.ru/anarchic/vibevm"
homepage = "https://gitverse.ru/anarchic/vibevm"

[workspace.dependencies]
# Internal crates — path-only (not published; consumed in-tree). The four
# neutral engine crates under crates/vendor/ are byte-identical vendored
# copies of flow:org.vibevm/discipline-core's authored source (`cargo xtask
# sync-engines`; the --check gate runs in self-check). Never edit them here —
# the fix surface is the authored copy in discipline-core.
conform-core = { path = "crates/vendor/conform-core" }
conform-frontend-rust = { path = "crates/conform-frontend-rust" }
conform-cli-rust = { path = "crates/conform-cli-rust" }
specmap-core = { path = "crates/vendor/specmap-core" }
specmap-cli-rust = { path = "crates/specmap-cli-rust" }
specmark = { path = "crates/vendor/specmark" }
specmark-grammar = { path = "crates/vendor/specmark-grammar" }

# Third-party (all permissive licenses — PROP-000 §3). Feature sets match
# vibevm's so the engine behaves identically wherever it is built.
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
toml = "0.9"
walkdir = "2"
glob = "0.3"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
clap = { version = "4", features = ["derive"] }

thiserror = "2"

# Dev / test
tempfile = "3"
