[package]
name = "tcg-oracle-bridge"
description = "Persistent client for the ts-oracle language-service process: embedding + materialisation, the TCG-PROTOCOL-v0.1 message types, correlation-id transport with timeouts, and the five-way error taxonomy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ts-extract-bridge = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
