# rust-ai-native-tcg — bin `rust-ai-native-tcg`: the persistent enriching relay
# (`serve`) an MCP host drives, the one-shot validate/scope/complete/
# type forms, and the differential/latency bench harness
# (TCG-PROTOCOL-RUST v0.1; AGENTIC-TCG-RUST-PLAN D4–D6). Enrichment is
# IN-PROCESS: the gate's own rule assembly over the gate's own fact
# extractor — no second engine, no drift.
[package]
name = "rust-ai-native-tcg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "rust-ai-native-tcg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rust-ai-native-conform.workspace = true
conform-core.workspace = true
rust-ai-native-conform-frontend.workspace = true
serde.workspace = true
serde_json.workspace = true
specmark.workspace = true
syn.workspace = true
rust-ai-native-tcg-bridge = { path = "../rust-ai-native-tcg-bridge" }
tempfile.workspace = true
thiserror.workspace = true

